# 3rd_imdc_emap_epidematicos

./: .gitignore  AGENTS.md  README.md
python_prophet/: README.md  main.py  pyproject.toml
python_prophet/results/chikungunya/: concluded_states.csv
python_prophet/results/chikungunya/city/: concluded_units.csv
python_prophet/results/chikungunya/metrics/: AC_metrics.csv  AL_metrics.csv  AM_metrics.csv  AP_metrics.csv  BA_metrics.csv  CE_metrics.csv  DF_metrics.csv  GO_metrics.csv  MA_metrics.csv  MG_metrics.csv  (+16 more)
python_prophet/results/metrics/: AC_metrics.csv  AL_metrics.csv  AM_metrics.csv  AP_metrics.csv  BA_metrics.csv  CE_metrics.csv  DF_metrics.csv  GO_metrics.csv  MA_metrics.csv  MG_metrics.csv  MS_metrics.csv  MT_metrics.csv  PA_metrics.csv  PB_metrics.csv  PE_metrics.csv  PI_metrics.csv  PR_metrics.csv  RJ_metrics.csv  RN_metrics.csv  RO_metrics.csv  RR_metrics.csv  RS_metrics.csv  SC_metrics.csv  SE_metrics.csv  SP_metrics.csv  TO_metrics.csv
python_prophet/results/predictions/: AC_validation.csv  AL_validation.csv  AM_validation.csv  AP_validation.csv  BA_validation.csv  CE_validation.csv  DF_validation.csv  GO_validation.csv  MA_validation.csv  MG_validation.csv  MS_validation.csv  MT_validation.csv  PA_validation.csv  PB_validation.csv  PE_validation.csv  PI_validation.csv  PR_validation.csv  RJ_validation.csv  RN_validation.csv  RO_validation.csv  RR_validation.csv  RS_validation.csv  SC_validation.csv  SE_validation.csv  SP_validation.csv  TO_validation.csv
python_prophet/src/: data_loader.py  model.py  run_all.py  submit_predictions.py
(+1179 files in other folders)
