[project]
name = "python-prophet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "epiweeks>=2.3.0",
    "joblib>=1.5.3",
    "mosqlient>=1.5.2",
    "numpy>=2.5.0",
    "pandas>=2.2.2,<3.0.0",
    "prophet>=1.3.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "scikit-learn>=1.9.0",
]
